fix poster spacing

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,6 @@ button:focus {
   width: 70px;
   text-align: center;
 }
-
 .spinner > div {
   width: 18px;
   height: 18px;
@@ -147,22 +146,18 @@ button:focus {
   -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
   animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
-
 .spinner .bounce1 {
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
-
 .spinner .bounce2 {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
-
 @-webkit-keyframes sk-bouncedelay {
   0%, 80%, 100% { -webkit-transform: scale(0) }
   40% { -webkit-transform: scale(1.0) }
 }
-
 @keyframes sk-bouncedelay {
   0%, 80%, 100% { 
     -webkit-transform: scale(0);
@@ -200,7 +195,7 @@ button:focus {
 	max-width: 456px;	
 }
 .detail-title {
-	margin: 10px 0;
+	margin: 20px 0 10px;
 	font-size: 26px;	
 }
 .detail-released {
